add docs folder to Dockerfile

--- a/docs/templates/index.html.jinja2
+++ b/docs/templates/index.html.jinja2
@@ -26,25 +26,7 @@
     {% endif %}
 
     {% filter to_html %}
-## Python library for GIS, Oracle spatial and other miscellaneous utilities
-Python packages developed by the years as requirements for my different projects as GIS developer with `QGIS`, `ESRI`,
-`Oracle`, `Postgis`, and other technologies used in this kind of projects with spatial data. `extra_utils`
-
-### Packages:
-- [*cx_oracle_spatial*](./cx_oracle_spatial.html)
-  Python modules to add spatial capabilities to cx_Oracle
-
-- [*extra_osgeo_utils*](./extra_osgeo_utils.html)
-  Python modules to do different stuff with spatial data using api OSGEO/GDAL
-
-- [*extra_utils*](./extra_utils.html)
-  Python modules to do different stuff about typical use cases in a python program
-
-- [*pandas_utils*](./pandas_utils.html)
-  Python modules to add functionality over pandas and geopandas
-
-- [*spatial_utils*](./spatial_utils.html)
-  Python modules to do different stuff with spatial data
+        {% include 'README.md' %}
     {% endfilter %}
 
     </main>
