refactor docs to use for different templates dirs

--- a/docs/templates/index.html.jinja2
+++ b/docs/templates/index.html.jinja2
@@ -26,7 +26,7 @@
     {% endif %}
 
     {% filter to_html %}
-        {% include 'README.md' %}
+        {% include env['MAIN_README_DOC'] or 'README.md' %}
     {% endfilter %}
 
     </main>
